--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -11,9 +11,10 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12">
+
       <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in main.awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
+      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="address in main.addressList">
+        <li><a href="#" tooltip="{{thing.info}}">{{address.firstname}}</a></li>
       </ul>
     </div>
   </div>
